force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/sf_devops__Test_Provider_Sync_History__c.object-meta.xml
<CustomObject>
    <description>Contains sync records of the project test providers</description>
    <label>Test Provider Sync History</label>
    <nameField>
        <label>Sync Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Provider Sync Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>