force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Error_Details__c</fullName>
    <label>Error Details Old</label>
    <type>TextArea</type>
</CustomField>