force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Error_Details_New__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Error_Details_New__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>