force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipName>Test_Provider_Sync_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>