force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Start_Time__c</fullName>
    <label>Sync Start Time</label>
    <type>DateTime</type>
</CustomField>