force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sf_devops__Sync_Results</valueSetName>
    </valueSet>
</CustomField>