force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/fields/sf_devops__Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider__c</fullName>
    <label>Test Provider</label>
    <referenceTo>sf_devops__Test_Provider__c</referenceTo>
    <relationshipName>Test_Provider_Sync_Histories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>