force-app/main/default/objects/sf_devops__Test_Provider_Sync_History__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Project__c</columns>
    <columns>sf_devops__Test_Provider__c</columns>
    <columns>sf_devops__Status__c</columns>
    <columns>sf_devops__Start_Time__c</columns>
    <columns>sf_devops__End_Time__c</columns>
    <columns>sf_devops__Error_Details_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>